[package]
name = "bell"
version = "0.1.0"
edition = "2021"

license-file = "LICENSE"
description = "CLI meditation timer"
homepage = "https://github.com/jaredforth/bell"
repository = "https://github.com/jaredforth/bell.git"
keywords = ["cli", "meditation", "timer", "command-line", "audio"]
categories = ["command-line-utilities", "multimedia::audio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.37"
clap = { version = "4.5.4", features = ["derive"] }
rodio = "0.17.3"
timer = "0.2.0"
